<resources xmlns:color="http://schemas.android.com/apk/res-auto">
    <string name="app_name">LearnProgramming</string>
    <string-array name="topics_item">
        <item>HTML</item>
        <item>CSS</item>
        <item>JAVASCRIPT</item>
        <item>C Programming</item>
        <item>JAVA</item>
        <item>PYTHON</item>
        <item>Database</item>
        <item>PRACTICE PROBLEM</item>

    </string-array>
    <string name="title">HTML</string>
    <string name="html">
        HTML (Hypertext Markup Language) is the code that is used to structure a web page and its content.

    </string>
    <string name="write_code">How to write HTML code </string>
    <string name="text_editor">

        Step 1: Open any Notepad (PC), VS code Windows 8 or later.\n
        Step 1: Open TextEdit (Mac) Open Finder > Applications > TextEdit.
        Step 2: Write Some HTML. Write or copy the following HTML code into Notepad\n
        Step 3: Save the HTML Page. Save the file on your computer.\n
        Step 4: View the HTML Page in Your Browser.
    </string>
    <string name="mainPageText">See all available rooms \u003E</string>
    <string name="listPageText">\uFE64 See my current status</string>
    <string name="document">Document</string>
    <string name="html_document">
        All HTML documents must start with a document type declaration: \uFE64!DOCTYPE html\u003E
        The HTML document itself begins with \uFE64html\u003E and ends with \uFE64/html\u003E.
        The visible part of the HTML document is between \uFE64body\u003E and \uFE64/body\u003E.
    </string>
    <string name="element">HTML Element</string>
    <string name="html_element">
        An HTML element is defined by a start tag, some content, and an end tag.\n
        The HTML element is everything from the start tag to the end tag.
        \uFE64tagname>Content goes here\uFE64/tagname>
    </string>
    <string name="heading">Heading</string>
    <string name="html_heading">
        HTML headings are titles or subtitles that you want to display on a webpage.\n
        There are six heading in HTML. HTML headings are defined with the \uFE64h1> to \uFE64h6> tags.
        \uFE64h1> defines the most important heading. \uFE64h6> defines the least important heading.\n\n\n

        Example:\n
        \uFE64h1>Heading 1\uFE64/h1>\n
        \uFE64h2>Heading 2\uFE64/h2>\n
        \uFE64h3>Heading 3\uFE64/h3>\n
        \uFE64h4>Heading 4\uFE64/h4>\n
        \uFE64h5>Heading 5\uFE64/h5>\n
       \uFE64h6>Heading 6\uFE64/h6>\n
    </string>
    <string name="paragraph">HTML Paragraph</string>
    <string name="html_paragraph">
        A paragraph always starts on a new line, and is usually a block of text.\n
        The HTML \uFE64p> element defines a paragraph.
        A paragraph always starts on a new line, and browsers automatically add some\n white space (a margin) before and after a paragraph.\n\n\n
        Example:\n
         \uFE64p>This is a paragraph. \uFE64/p>
    \uFE64p>This is another paragraph. \uFE64/p>
    </string>
    <string name="formatting">HTML Formatting</string>
    <string name="html_formatting">
        HTML contains several elements for defining text with a special meaning.\n
        Formatting elements were designed to display special types of text.\n

        \uFE64b> - Bold text\n
        \uFE64strong> - Important text\n
        \uFE64i> - Italic text\n
        \uFE64em> - Emphasized text\n
        \uFE64mark> - Marked text\n
        \uFE64small> - Smaller text\n
        \uFE64del> - Deleted text\n
        \uFE64ins> - Inserted text\n
        \uFE64sub> - Subscript text\n
        \uFE64sup> - Superscript text\n

        1.The HTML \uFE64b> element defines bold text, without any extra importance.\n
        Example:\n
        \uFE64b>This text is bold\uFE64/b>\n\n

        2.The HTML \uFE64strong> element defines text with strong importance. And the inside is typically displayed in bold.\n\n
        Example:\n
        \uFE64strong>This text is important!\uFE64/strong>\n\n

        3.The HTML \uFE64i> element defines the content inside is typically displayed in italic.\n
        Example:\n
        \uFE64i>This text is italic\uFE64/i>\n\n

        4.The HTML \uFE64small> element defines smaller text.\n
        Example:\n
        \uFE64small>This is some smaller text.\uFE64/small>\n\n

        5.The HTML \uFE64mark> element defines text that should be marked or highlighted\n
        Example:\n
        \uFE64p>Oh shit! I forget to buy \uFE64mark>milk\uFE64/mark>for my child.\uFE64/p>\n\n

        6. The HTML \uFE64sub> element defines subscript text.\n
        Example:\n
        \uFE64p>This is \uFE64sub>subscripted\uFE64/sub> text.\uFE64/p>\n\n

        7.The HTML \uFE64sup> element defines superscript text.\n
        Example:\n
        \uFE64p>This is \uFE64sup>superscripted\uFE64/sup> text.\uFE64/p>

    </string>
    <string name="link">HTML Links</string>
    <string name="html_link">
        Links are found in nearly all web pages. Links allow users to click their way from page to page.\n
        HTML links are hyperlinks. \nYou can click on a link and jump to another document.\n
        When you move the mouse over a link, the mouse arrow will turn into a little hand.\n\n
        The most important attribute of the \uFE64a> element is the href attribute,\n which indicates the links destination.\n
        The link text is the part that will be visible to the reader.\n
        Clicking on the link text, will send the reader to the specified URL address.\n\n
        Example:\n
        \uFE64a href="\"url"\">link text\uFE64/a>\n

        \uFE64a href="https://www.facebook.com//", >Go to my Facebook account\uFE64/a>\n

       Use target="_blank" to open the linked document in a new browser window or tab:\n
        \uFE64a href="https://www.mirazhome.com/" target="_blank">Go to my home website!\uFE64/a>
    </string>
    <string name="image">HTML Image</string>
    <string name="html_image">
        Using Images in your web page can improve the design and the appearance of a web page.\n
        We can use image in some ways and style the image using CSS. We will learn style in CSS lesson.\n

        <b>Example:</b>\n
         \uFE64img src="\"url.jpg"\">\n

        \uFE64img src="\"my_image.jpg"\">\n\n
        we can describe any image using an attribute that is -"\"alt"\"\n
        Example:\n
         \uFE64img src="\"nature.jpg"\" alt="the weather is so beautiful ">



    </string>
    <string name="table">HTML Table</string>
    <string name="html_table">
        HTML tables allow web developers to arrange data into rows and columns.\n
        A HTML table make using some HTML tags.\n
        Such as: table, td,tr,th etc.\n\n
        Everything between \uFE64td> and \uFE64/td> are the content of the table cell.\n
        And td stands for table data\n.
        Example:\n
        \uFE64table>\n
            \uFE64tr>\n
                \uFE64td>Name\uFE64/td>\n
                \uFE64d>Email\uFE64/td>\n
                \uFE64td>Address\uFE64/td>\n
            \uFE64/tr>\n
        \uFE64/table>\n

        Each table row starts with a \uFE64tr> and end with a \uFE64/tr> tag.\ntr stands for table row.\n
        Example:\n
         \uFE64table>\n
             \uFE64tr>\n
                 \uFE64td>Name \uFE64/td>\n
                 \uFE64td>Email \uFE64/td>\n
                 \uFE64td>Address \uFE64/td>\n
             \uFE64/tr>\n
             \uFE64tr>\n
                 \uFE64td>Miraz \uFE64/td>\n
                 \uFE64td>miraz@ gmail.com\uFE64/td>\n
                 \uFE64td>khilkhet \uFE64/td>\n
             \uFE64/tr>\n
        \uFE64/table>\n\n

        th stands for table header\n
        Example:\n
       \uFE64table>\n
        \uFE64tr>\n
            \uFE64th>Name\uFE64/th>\n
            \uFE64th>ID\uFE64/th>\n
            \uFE64th>CGPA\uFE64/th>\n
        \uFE64/tr>\n
        \uFE64/table>\n\n



    </string>
    <string name="list">HTML List</string>
    <string name="html_list">
        HTML lists allow web developers to group a set of related items in lists.\n
    </string>
    <string name="unordered">Unordered List</string>
    <string name="unordered_list">
        An unordered list starts with the \uFE64ul> tag. Each list item starts with the \uFE64li> tag.
        The list items will be marked with bullets (small black circles) by default.\n

        Example:\n
        \uFE64ul>\n
            \uFE64li>Coffee\uFE64/li>\n
            \uFE64li>Tea\uFE64/li>\n
            \uFE64li>Milk\uFE64/li>\n
        \uFE64/ul>\n

    </string>
    <string name="ordered">Ordered List</string>
    <string name="ordered_list">
        An ordered list starts with the \uFE64ol> tag. Each list item starts with the \uFE64li> tag.\n
        The list items will be marked with numbers by default.\n\n

        \uFE64ol>\n
            \uFE64li>Coffee\uFE64/li>\n
            \uFE64li>Tea\uFE64/li>\n
            \uFE64li>Milk\uFE64/li>\n
        \uFE64/ol>\n
    </string>
    <string name="form">HTML Form</string>
    <string name="html_form">
        An HTML form is used to collect user input. The user input is most often sent to a server for processing.\n
        The HTML \uFE64form> element is used to create an HTML form for user input.\n
        The \uFE64form> element is a container for different types of input elements, such as:\n
        text fields,email,password checkboxes, radio buttons, submit buttons, etc.\n\n

        Example:\n
        \uFE64form>
            \uFE64label for="\"fname"\">First name:\uFE64/label>\n
            \uFE64input type="\"text"\" id="fname" name="fname">\n
            \uFE64label for="\"lname"\">Last name:\uFE64/label>\n
            \uFE64input type="\"text"\" id="lname" name="lname">\n
            \uFE64input type="\"radio"\" id="html" name="fav_language" value="HTML">\n
            \uFE64label for="\"html"\">HTML\uFE64/label>\n
            \uFE64input type="\"checkbox"\" id="\"vehicle1"\" name="\"vehicle1"\" value="\"Bike"\">\n
            \uFE64label for="\"vehicle1"\"> I have learn android\uFE64/label>\n

        \uFE64/form>\n



    </string>
    <string name="update_status">It will update later in the next version of the system: </string>
    <string name="css_title">CSS</string>
    <string name="css">
        CSS is the language we use to style an HTML document.\n
        CSS describes how HTML elements should be displayed.\n
        CSS stands for Cascading Style Sheets.\n
        CSS describes how HTML elements are to be displayed on screen, paper, or in other media.\n
        CSS saves a lot of work. It can control the layout of multiple web pages all at once.\n
        External stylesheets are stored in CSS files.\n\n
        CSS is used to define styles for your web pages, including the design, layout and variations in display for different devices and screen sizes.\n
        <b>Example:</b>\n
        body {\n
        background-color: lightblue;\n
        }\n
        h1 {\n
        color: white;\n
        text-align: center;\n
        }\n

        p {\n
        font-family: verdana;\n
        font-size: 20px;\n
        }\n
    </string>
    <string name="selector">CSS Selector</string>
</resources>